# investment-research-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: etfs_acoes.txt  fundos_imobiliarios.txt  renda_fixa.txt
src/: config.py  main.py
src/agents/: __init__.py  advisor.py  analyst.py  orchestrator.py  researcher.py
src/rag/: __init__.py  embeddings.py  ingestion.py  retriever.py
src/schemas/: models.py
tests/: conftest.py  test_agents.py  test_api.py  test_integration.py  test_rag.py
